tests/should-fail/shouldnt-crash-9.j
function a takes nothing returns integer
	if true then
		return 0
	elseif false then
	else
type a extends aif
endfunction
